loader image full smart backend base with search fikters

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@fancyapps/ui": "^4.0.31",
+    "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.10.2",
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
@@ -15,6 +16,7 @@
     "lightgallery": "^2.5.0",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
     "react-icons": "^4.4.0",
