--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "lightgallery": "^2.5.0",
+    "lodash.debounce": "^4.0.8",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.0",
